@@ -44,10 +44,12 @@
 	<classpathentry kind="lib" path="tools/javahelp/jhall.jar"/>
 	<classpathentry kind="lib" path="tools/jgraph/jgraph.jar"/>
 	<classpathentry kind="lib" path="tools/jeditsyntax/jEdit-syntax.jar"/>
-	<classpathentry kind="lib" path="tools/txm/jxpdl.jar" sourcepath="/jxpdl"/>
+	<classpathentry kind="lib" path="tools/txm/jxpdl.jar"/>
 	<classpathentry kind="lib" path="tools/jna/jna.jar"/>
 	<classpathentry kind="lib" path="tools/xerces/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="tools/xml-commons/xml-apis.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="tools/xalan/serializer.jar"/>
+	<classpathentry kind="lib" path="tools/xalan/xalan.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
