@@ -1438,7 +1438,7 @@ public class JaWEController extends Observable implements Observer, JaWEComponen
          JaWEManager.getInstance().getXPDLHandler().getXPDLRepositoryHandler().toXML(document, pkg);
 
          // Use a Transformer for output
-         TransformerFactory tFactory = TransformerFactory.newInstance();
+         TransformerFactory tFactory = new org.apache.xalan.processor.TransformerFactoryImpl();
          Transformer transformer = tFactory.newTransformer();
          transformer.setOutputProperty("indent", "yes");
          transformer.setOutputProperty("{http://xml.apache.org/xslt}indent-amount", "4");
